# scar

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp  scar.cpp  scar.hpp
.github/workflows/: docker.yml
